# transcoder

./: .gitignore  CMakeLists.txt  Makefile  Makefile.Debug  Makefile.Release  README.md  README_EN.md  UI_美化说明.md  config_test_example.cpp  configmanager.cpp  configmanager.h  encoding.h  main.cpp  readme_zh.md  renamedialog.cpp  renamedialog.h  renamedialog.ui  resources.qrc  selecteddirsdialog.cpp  selecteddirsdialog.h  selecteddirsdialog.ui  settingdialog.cpp  settingdialog.h  settingdialog.ui  transcodemodel.cpp  transcodemodel.h  transcoder.cpp  transcoder.h  transcoder.pro  transcoder.ui  transcoder.vcxproj  transcoder.vcxproj.filters  transcodetask.cpp  transcodetask.h  transcodetaskmanager.cpp  transcodetaskmanager.h  transcodeworker.cpp  transcodeworker.h  videoinfodialog.cpp  videoinfodialog.h
.github/workflows/: build.yml
styles/: README_themes.txt  dark.qss  modern.qss  主题对比.txt
utils/: ffmpegutils.cpp  ffmpegutils.h  httpclient.cpp  httpclient.h
